# mlt

./: .gitignore  CMakeLists.txt
cmake/: FindFFmpeg.cmake  FindMlt.cmake  mlt++Config.cmake  mltConfig.cmake
src/: CMakeLists.txt  config_mlt.h.in
src/app/: BuildOnMe.pro  CMakeLists.txt  FrameWdg.cpp  FrameWdg.h  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mltcontroller.cpp  mltcontroller.h
src/framework/: CMakeLists.txt  mlt.h  mlt_animation.c  mlt_animation.h  mlt_cache.h  mlt_consumer.c  mlt_consumer.h  mlt_defines.h  mlt_deque.h  mlt_events.h  mlt_factory.c  mlt_factory.h  mlt_field.h  mlt_filter.h  mlt_frame.c  mlt_frame.h  mlt_geometry.c  mlt_geometry.h  mlt_log.c  mlt_log.h  mlt_multitrack.h  mlt_parser.h  mlt_playlist.h  mlt_pool.c  mlt_producer.h  mlt_profile.c  mlt_profile.h  mlt_properties.c  mlt_properties.h  mlt_property.c  mlt_property.h  mlt_repository.c  mlt_repository.h  mlt_service.h  mlt_slices.c  mlt_slices.h  mlt_tokeniser.c  mlt_tokeniser.h  mlt_tractor.h  mlt_transition.h  (+2 more)
src/melt/: CMakeLists.txt  melt.c
src/mlt++/: CMakeLists.txt  MltConsumer.cpp  MltFactory.cpp  MltFactory.h  MltFilter.cpp  MltFrame.cpp  MltFrame.h  MltPlaylist.cpp  MltTransition.cpp
src/modules/: CMakeLists.txt
src/modules/avformat/: CMakeLists.txt  Makefile  consumer_avformat.c  filter_avfilter.c  producer_avformat.c
src/modules/core/: CMakeLists.txt  consumer_multi.c  factory.c  filter_audiochannels.c  filter_channelcopy.c  filter_data_show.c  filter_mono.c  producer_colour.c  producer_loader.c  producer_melt.c  producer_tone.c  transition_composite.c  transition_luma.c  transition_mix.c  transition_region.c
src/modules/frei0r/: CMakeLists.txt
src/modules/qt/: CMakeLists.txt  consumer_qglsl.cpp  filter_audiowaveform.cpp  filter_qtblend.cpp  kdenlivetitle_wrapper.h  producer_qimage.c  producer_qtext.cpp  qimage_wrapper.cpp  transition_qtblend.cpp
src/modules/sdl/: CMakeLists.txt
src/modules/sdl2/: CMakeLists.txt
src/modules/xml/: CMakeLists.txt
src/tests/: CMakeLists.txt  test_common.cmake
src/tests/test_animation/: CMakeLists.txt
src/tests/test_filter/: CMakeLists.txt
src/tests/test_frame/: CMakeLists.txt
src/tests/test_properties/: CMakeLists.txt  test_properties.cpp
src/tests/test_repository/: CMakeLists.txt
src/tests/test_tractor/: CMakeLists.txt
src/win32/: win32.c  win32.h  win_time.c  win_time.h
